force-app/main/default/objects/leaseworks__Payment_Receipt__c/leaseworks__Payment_Receipt__c.object-meta.xml
<CustomObject>
    <label>Payment Studio</label>
    <nameField>
        <label>Payment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Studio</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>