force-app/main/default/objects/leaseworks__Payment_Receipt__c/fields/Accounting_Period_Local__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Period_Local__c</fullName>
    <description>Temp field</description>
    <label>Accounting Period Local</label>
    <type>Date</type>
</CustomField>