force-app/main/default/objects/leaseworks__Payment_Receipt__c/fields/leaseworks__Bank_Account_Lkp__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Bank_Account_Lkp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Z_Unused_2106 Bank Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Payment Studio</relationshipLabel>
    <relationshipName>Payment_Studio</relationshipName>
    <type>Lookup</type>
</CustomField>