force-app/main/default/objects/leaseworks__Payment_Receipt__c/fields/leaseworks__Cash_Entity_Bank_Account__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Cash_Entity_Bank_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The bank account that received the funds for the cash entity.</description>
    <inlineHelpText>Bank Account that received the funds for the cash entity.</inlineHelpText>
    <label>Cash Entity Bank Account</label>
    <referenceTo>leaseworks__Bank_Account__c</referenceTo>
    <relationshipLabel>Payment Studio (Cash Entity Bank Account)</relationshipLabel>
    <relationshipName>Payment_Studio1</relationshipName>
    <type>Lookup</type>
</CustomField>