force-app/main/default/objects/leaseworks__Payment_Receipt__c/fields/leaseworks__Intercompany_Payment__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Intercompany_Payment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to load the value of the Intercompany Payment checkbox on Edit mode and to create the payment with Intercompany Offset checked.</description>
    <inlineHelpText>Indicates if the payment was received by one company on behalf of one or more different companies. E.g. Entity A receives cash in it&#39;s bank account on behalf on invoices related to Entity B and Entity C.</inlineHelpText>
    <label>Intercompany Payment</label>
    <type>Checkbox</type>
</CustomField>