force-app/main/default/objects/leaseworks__Payment_Receipt__c/fields/leaseworks__Loan__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Loan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Loan</label>
    <referenceTo>leaseworks__Loan__c</referenceTo>
    <relationshipLabel>Payment Studio</relationshipLabel>
    <relationshipName>Payment_Studio</relationshipName>
    <type>Lookup</type>
</CustomField>