force-app/main/default/objects/leaseworks__Payment_Receipt__c/fields/leaseworks__LOC_Transactions__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__LOC_Transactions__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LOC Transactions</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>leaseworks__LOC_Transactions__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Drawdown</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>leaseworks__LOC_Transactions__c</referenceTo>
    <relationshipLabel>Payment Studio</relationshipLabel>
    <relationshipName>Payment_Studio</relationshipName>
    <type>Lookup</type>
</CustomField>