force-app/main/default/objects/leaseworks__Payment_Receipt__c/fields/leaseworks__Message__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Message__c</fullName>
    <description>This is field is used in undo Cancellation quick action</description>
    <formula>&apos;This action can only be performed on records in Cancelled-Pending status.&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Message</label>
    <type>Text</type>
</CustomField>