force-app/main/default/objects/leaseworks__Payment_Receipt__c/fields/leaseworks__MR_Claim_Event_Invoice__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__MR_Claim_Event_Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Z_Unused_2106 MR Claim Event Invoice</label>
    <referenceTo>leaseworks__Constt_Assembly_Eligible_Event_Invoice__c</referenceTo>
    <relationshipLabel>Payment Studio</relationshipLabel>
    <relationshipName>Payment_Studio</relationshipName>
    <type>Lookup</type>
</CustomField>