force-app/main/default/objects/leaseworks__Payment_Receipt__c/fields/leaseworks__Operator__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Operator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>_Z_Unused_2302_Operator</label>
    <referenceTo>leaseworks__Operator__c</referenceTo>
    <relationshipLabel>Z_Unused_2302 Payment Studio</relationshipLabel>
    <relationshipName>Payments_Operator</relationshipName>
    <type>Lookup</type>
</CustomField>