force-app/main/default/objects/leaseworks__Payment_Receipt__c/fields/leaseworks__Payable_Type__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Payable_Type__c</fullName>
    <description>The type of payable record used for offsetting.</description>
    <inlineHelpText>The type of payable record used for offsetting.</inlineHelpText>
    <label>Payable Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>