force-app/main/default/objects/leaseworks__Payment_Receipt__c/fields/leaseworks__Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Payment_Date__c</fullName>
    <label>Payment Date</label>
    <type>Date</type>
</CustomField>