force-app/main/default/objects/leaseworks__Payment_Receipt__c/fields/leaseworks__Reversal_Accounting_Period__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Reversal_Accounting_Period__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The accounting period for the reversal journal entry.</description>
    <inlineHelpText>Enter the accounting period for the reversal journal entry. Only open accounting periods will be listed for selection</inlineHelpText>
    <label>Reversal Accounting Period</label>
    <referenceTo>leaseworks__Calendar_Period__c</referenceTo>
    <relationshipLabel>Payment Studio (Reversal Accounting Period)</relationshipLabel>
    <relationshipName>Payment_Studio1</relationshipName>
    <type>Lookup</type>
</CustomField>