force-app/main/default/objects/leaseworks__Payment_Receipt__c/fields/leaseworks__Total_Bank_Charges__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Total_Bank_Charges__c</fullName>
    <description>[LOAD: No]
        [JUSTIFICATION: This field is deprecated]
        [REPLACEMENT OBJECT API: Payment_Receipt__c]
        [REPLACEMENT FIELD API: Total_Bank_Charges_Number__c]
        [COMMENTS: Asana Link https://app.asana.com/1/7934919496419/project/1108557631023783/task/1210997156313338?focus=true
            Reason - Created relevant number field for this currency field
            Version - v55]</description>
    <label>Z_Unused_2509 Bank Charges(Invoice App)</label>
    <summarizedField>leaseworks__Payment_Receipt_Line_Item__c.leaseworks__Bank_Charges__c</summarizedField>
    <summaryForeignKey>leaseworks__Payment_Receipt_Line_Item__c.leaseworks__Payment_Receipt__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>