force-app/main/default/objects/leaseworks__Payment_Receipt__c/fields/leaseworks__Total_Bank_Charges_Number__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Total_Bank_Charges_Number__c</fullName>
    <description>Displays the total Bank Charges from all related Payment Line Items associated with this Invoice Application.</description>
    <inlineHelpText>Displays the total Bank Charges from all related Payment Line Items associated with this Invoice Application.</inlineHelpText>
    <label>Bank Charges (Invoice Application)</label>
    <summarizedField>leaseworks__Payment_Receipt_Line_Item__c.leaseworks__Bank_Charges_Number__c</summarizedField>
    <summaryForeignKey>leaseworks__Payment_Receipt_Line_Item__c.leaseworks__Payment_Receipt__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>