force-app/main/default/objects/leaseworks__Payment_Receipt__c/fields/leaseworks__Total_Payment_on_Accounts__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Total_Payment_on_Accounts__c</fullName>
    <description>Sum of the  Payments on Account amounts recorded against one or more lessees.</description>
    <inlineHelpText>Sum of the  Payments on Account amounts recorded against one or more lessees.</inlineHelpText>
    <label>Total Payments on Account</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>