force-app/main/default/objects/leaseworks__Payment_Receipt__c/fields/leaseworks__Transaction_Currency__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Transaction_Currency__c</fullName>
    <description>Represents the currency in which this payment is made.</description>
    <inlineHelpText>Represents the currency in which this payment is made.</inlineHelpText>
    <label>Transaction Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>leaseworks__Currency_GP</valueSetName>
    </valueSet>
</CustomField>