force-app/main/default/objects/leaseworks__Payment_Receipt__c/fields/leaseworks__Y_Hidden_Acc_Enabled__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Y_Hidden_Acc_Enabled__c</fullName>
    <description>This field is a no longer used for Payment Studio Accounting JLs</description>
    <formula>false</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>_Acc Enabled</label>
    <type>Checkbox</type>
</CustomField>