force-app/main/default/objects/leaseworks__Payment_Receipt__c/validationRules/leaseworks__AvailableBalanceNotLessThanZero.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__AvailableBalanceNotLessThanZero</fullName>
    <active>true</active>
    <description>Available balance should not be less than Zero</description>
    <errorConditionFormula>/*AND(Prepayment__c, Available_Balance_Cur__c &lt; 0.0 )*/false</errorConditionFormula>
    <errorMessage>The Available balance on the Prepayment cannot be less than 0</errorMessage>
</ValidationRule>