force-app/main/default/objects/leaseworks__Payment_Receipt__c/validationRules/leaseworks__BankAssociatedToLeaseHeaderCompany.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__BankAssociatedToLeaseHeaderCompany</fullName>
    <active>true</active>
    <description>The Bank should be associated to the Header Company on the lease</description>
    <errorConditionFormula>/*AND(!$Setup.LeaseWorksSettings__c.Disable_All_WFs__c,isNEW(),Lease__c !=null, Lease__r.Legal_Entity__c != Bnk_Account_Lkp__r.BA_Legal_Entity__c, Prepayment__c )*/false</errorConditionFormula>
    <errorMessage>Please select a Bank associated with the Header Company of the selected Lease</errorMessage>
</ValidationRule>