force-app/main/default/objects/leaseworks__Payment_Receipt__c/listViews/All_with_Filters.listView-meta.xml
<ListView>
    <fullName>All_with_Filters</fullName>
    <columns>leaseworks__Payment_Date__c</columns>
    <columns>NAME</columns>
    <columns>leaseworks__Payment_Amount_Cur__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>leaseworks__Source_of_Funds__c</columns>
    <columns>leaseworks__Approval_Status__c</columns>
    <columns>leaseworks__Amount_Paid__c</columns>
    <columns>leaseworks__Available_Balance_Cur__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Payment Studio</label>
</ListView>