force-app/main/default/objects/leaseworks__Payment_Receipt__c/listViews/Pending_Payments.listView-meta.xml
<ListView>
    <fullName>Pending_Payments</fullName>
    <columns>CREATED_DATE</columns>
    <columns>leaseworks__Payment_Date__c</columns>
    <columns>NAME</columns>
    <columns>leaseworks__Payment_Amount_Cur__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>leaseworks__Source_of_Funds__c</columns>
    <columns>leaseworks__Approval_Status__c</columns>
    <columns>leaseworks__Amount_Paid__c</columns>
    <columns>leaseworks__Available_Balance_Cur__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>leaseworks__Approval_Status__c</field>
        <operation>equals</operation>
        <value>Pending,Submitted for Approval</value>
    </filters>
    <label>Pending Payments</label>
</ListView>